--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,122 @@
 @tailwind utilities;
 
 :root {
-  --primary-color: #dda83a;
-  --secondary-color: #015a4a;
+  --primary: hsl(40, 71%, 55%);
+  --secondary: hsl(169, 98%, 18%);
+}
+
+/* @layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --primary: 40, 71%, 55%;
+    --primaryHover: 231.04 71.28% 63.14%;
+    --primarySuperLight: 250 54.55% 95.69%;
+    --bgLight: 0 0% 94.12%;
+    --danger: 359.62 90.75% 66.08%;
+    --dangerHover: 6.28 100% 37.45%;
+    --sideBarBg: 210 10.34% 22.75%;
+    --borderColor: 0 0% 85.88%;
+    --primaryBg: 40, 71%, 55%;
+    --inputBg: 0 0% 100%;
+    --grayBg: 0 0% 43.14%;
+    --secondaryBg: 0 0% 94.12%;
+    --success: 162.06 45.54% 41.76%;
+    --successTint: 161.79 45.53% 51.76%;
+    --textColor: 0 0% 0%;
+    --textColorLight: 0 0% 46.67%;
+    --textColorExtraLight: 261 12.2% 67.84%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: #015a4a;
+    --secondaryHover: 30.33 100% 63.92%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --primaryHover: 231.04 71.28% 63.14%;
+    --primarySuperLight: 250 54.55% 95.69%;
+    --danger: 359.62 90.75% 66.08%;
+    --dangerHover: 6.28 100% 37.45%;
+    --sideBarBg: 210 10.34% 22.75%;
+    --primaryBg: 210 10.34% 22.75%;
+    --borderColor: 215 13.79% 34.12%;
+    --grayBg: 0 0% 43.14%;
+    --secondaryBg: 0 0% 9.8%;
+    --inputBg: 240 16.36% 21.57%;
+    --success: 162.06 45.54% 41.76%;
+    --successTint: 161.79 45.53% 51.76%;
+    --textColor: 0 0% 100%;
+    --textColorLight: 208.24 7.3% 45.69%;
+    --textColorExtraLight: 260.87 12.43% 63.73%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary-foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+} */
+
+/* For Webkit-based browsers (Chrome, Safari and Opera) */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .light-mode {
@@ -18,15 +132,15 @@
 }
 
 .link:hover {
-  color: var(--primary-color);
+  color: var(--primary);
   font-weight: bold;
 }
 
 .link.active {
-  color: var(--primary-color);
+  color: var(--primary);
   font-weight: 600;
   border: none;
-  border-left: 3px solid var(--primary-color);
+  border-left: 3px solid var(--primary);
   background-color: rgba(114, 82, 243, 0.05);
   padding: 10px 20px;
   border-top-right-radius: 0.5rem;
@@ -48,7 +162,6 @@
   .logo {
     left: 2rem;
   }
-  
 }
 
 .form_img {
@@ -63,22 +176,21 @@
 .tabs__header .login_tab[data-state="active"],
 .tabs__header .register_tab[data-state="active"] {
   border: none;
-  background-color: var(--primary-color);
+  background-color: var(--primary);
   border-radius: 4rem;
   color: #fff;
 }
 
 .login_btn,
 .register_btn {
-  background-color: var(--primary-color);
+  background-color: var(--primary);
   color: #fff;
   border: none;
   border-radius: 0.5rem;
 }
 
-
 .form__container {
-  border: 2px solid var(--primary-color);
+  border: 2px solid var(--primary);
   border-radius: 20px;
   padding: 2.5rem;
   background-color: #fafafa;
@@ -102,14 +214,14 @@ input {
 }
 
 .date-range-selector button span::before {
-  border-color: var(--primary-color);
+  border-color: var(--primary);
 }
 
 .react-datepicker__month-container
   .react-datepicker__month
   .react-datepicker__week
   .react-datepicker__day--keyboard-selected {
-  background-color: var(--primary-color);
+  background-color: var(--primary);
   color: #fff;
 }
 
@@ -117,7 +229,7 @@ input {
   .react-datepicker__month
   .react-datepicker__week
   .react-datepicker__day--in-range {
-  background-color: var(--secondary-color);
+  background-color: var(--secondary);
   color: #fff;
 }
 
@@ -144,12 +256,12 @@ select {
 
 .task_input:focus {
   border: none;
-  outline: 2px solid var(--primary-color);
+  outline: 2px solid var(--primary);
 }
 
 .hour_input:focus {
   border: none;
-  outline: 2px solid var(--primary-color);
+  outline: 2px solid var(--primary);
 }
 
 .project-card {
@@ -167,12 +279,12 @@ select {
 }
 
 .active_tab {
-  color: var(--primary-color);
-  border-bottom: 2px solid var(--primary-color);
+  color: var(--primary);
+  border-bottom: 2px solid var(--primary);
 }
 
 .active_side-tab {
-  background-color: var(--primary-color);
+  background-color: var(--primary);
   color: white;
   width: 100%;
   /* border-radius: 1rem; */
@@ -197,14 +309,14 @@ select {
 }
 
 .custom-class > *[data-ut-element="button"][data-state="uploading"] {
-  background-color: var(--primary-color);
+  background-color: var(--primary);
   color: white;
   cursor: not-allowed;
 }
 
 /* applied to the upload indicator when uploading */
 .custom-class > *[data-ut-element="button"][data-state="uploading"]::after {
-  background-color: var(--secondary-color);
+  background-color: var(--secondary);
 }
 
 .custom-radio-input {
@@ -219,11 +331,11 @@ select {
 
 /* Custom circle inside the radio */
 .custom-radio-input::after {
-  content: '';
+  content: "";
   display: block;
   width: 10px;
   height: 10px;
-  background-color: var(--primary-color); /* Circle color */
+  background-color: var(--primary); /* Circle color */
   border-radius: 50%; /* Circle shape */
   position: absolute;
   top: 50%;
@@ -244,123 +356,6 @@ select {
 
 /* For IE, Edge and Firefox */
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-}
-
- 
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
- 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
- 
-    --primary: 247 56.6% 58.43%;
-    --primaryHover: 231.04 71.28% 63.14%;
-    --primarySuperLight: 250 54.55% 95.69%;
-    --bgLight: 0 0% 94.12%;
-    --danger: 359.62 90.75% 66.08%;
-    --dangerHover: 6.28 100% 37.45%;
-    --sideBarBg: 210 10.34% 22.75%;
-    --borderColor: 0 0% 85.88%;
-    --primaryBg: 0 0% 100%;
-    --inputBg: 0 0% 100%;
-    --grayBg: 0 0% 43.14%;
-    --secondaryBg: 0 0% 94.12%;
-    --success: 162.06 45.54% 41.76%;
-    --successTint: 161.79 45.53% 51.76%;
-    --textColor: 0 0% 0%;
-    --textColorLight: 0 0% 46.67%;
-    --textColorExtraLight: 261 12.2% 67.84%;
-    --primary-foreground: 210 40% 98%;
- 
-    --secondary: 42.18 99.17% 47.25%;
-    --secondaryHover: 30.33 100% 63.92%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
- 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
- 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
- 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
- 
-    --radius: 0.5rem;
-  }
- 
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
- 
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
- 
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
- 
-    --primary: 247 56.6% 58.43%;
-    --primaryHover: 231.04 71.28% 63.14%;
-    --primarySuperLight: 250 54.55% 95.69%;
-    --danger: 359.62 90.75% 66.08%;
-    --dangerHover: 6.28 100% 37.45%;
-    --sideBarBg: 210 10.34% 22.75%;
-    --primaryBg: 210 10.34% 22.75%;
-    --borderColor: 215 13.79% 34.12%;
-    --grayBg: 0 0% 43.14%;
-    --secondaryBg: 0 0% 9.8%;
-    --inputBg: 240 16.36% 21.57%;
-    --success: 162.06 45.54% 41.76%;
-    --successTint: 161.79 45.53% 51.76%;
-    --textColor: 0 0% 100%;
-    --textColorLight: 208.24 7.3% 45.69%;
-    --textColorExtraLight: 260.87 12.43% 63.73%;
-    --primary-foreground: 222.2 47.4% 11.2%;
- 
-    --secondary: 42.18 99.17% 47.25%;
-    --secondary-foreground: 210 40% 98%;
- 
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
- 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
- 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
- 
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
-  }
-}
- 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
-
-/* For Webkit-based browsers (Chrome, Safari and Opera) */
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
-}
-
-/* For IE, Edge and Firefox */
-.scrollbar-hide {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
